fixed container overflow

--- a/index.css
+++ b/index.css
@@ -18,7 +18,8 @@ body {
 #container {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 #custom-header {
